<?xml version="1.0"?>
<package>
  <name>openzen_sensor</name>
  <version>1.0.0</version>
  <description>ROS driver for LP-Research OpenZen</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="lxf@alubi.cn">Feng</maintainer>
  <maintainer email="yap@lp-research.com">H.E. YAP</maintainer>

  <!-- This packages license -->
  <license>MIT</license>
  <!-- licenses used by OpenZen and its dependencies -->
  <license>Boost Software License</license>
  <license>LGPLv3</license>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>topic_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>
</package>
