<?xml version="1.0"?>
<package format="2">
  <name>dhand_description</name>
  <version>1.0.0</version>
  <description>The dhand_description package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <license>BSD</license>

  <url type="repository">http://github.com/Nishida-Lab/dhand_ros_pkg</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  
</package>
