<?xml version="1.0"?>
<package>
  <name>dhand_driver</name>
  <version>1.0.0</version>
  <description>The dhand_driver package</description>
  
  <maintainer email="thibault@todo.todo">thibault</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

</package>
