<?xml version="1.0"?>
<package>
  <name>dhand_msgs</name>
  <version>0.0.1</version>
  <description>The dhand package to control the physical device D-Hand.</description>

  <maintainer email="thibault.barbie@free.fr">Thibault Barbie</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
